--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.cabelo.droidOpenDataBr"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="3" />
+      android:versionCode="5"
+      android:versionName="5.1">
+      
+    <uses-sdk android:minSdkVersion="3" />       
+    <supports-screens  android:smallScreens="false" android:normalScreens="true" android:largeScreens="true"  android:anyDensity="true"  />
+    
     <uses-permission        android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".conectar"
